--- a/EDA_retail_business.ipynb
+++ b/EDA_retail_business.ipynb
@@ -728,7 +728,7 @@
    "metadata": {},
    "source": [
     "##### Insights: \n",
-    "The analysis revealed two key insights regarding sales performance. First, there was a positive relationship between discount levels and average sales, indicating that higher discounts can effectively drive sales volume. Second, the data showed a substantial impact of holiday periods, with average sales being markedly higher during these seasons compared to non-holiday times. "
+    "Despite the common assumption that holidays drive a surge in sales, data reveals that WOMart's average sales during holiday periods remain relatively consistent with non-holiday times. Instead, it’s the level of discounts that significantly impacts sales performance. Higher discount levels show a clear positive correlation with increased sales, suggesting that targeted promotional strategies are more effective in boosting revenue than relying on holiday shopping periods alone. "
    ]
   },
   {
